# osbuild-cfg

./: Cargo.toml  Containerfile  README.md
.github/workflows/: build-container.yml  ci.yml
src/: blueprint.rs  main.rs  osrelease.rs
test-containers/: Containerfile  myblueprint.toml
